tests/paczka1/fuzzy1/49094215.err
Error in line 1: PJg S545 52,1
Error in line 6: QIbEw A734 21,1
Error in line 10: BIti7 S545 37,4
Error in line 5: S545 S545 46,4
Error in line 9: PChX A174 75,3
Error in line 27: QXBW S545 88,7
Error in line 25: BIti7 S67 63,6
